--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "assist_3d",
   "version": "0.1.0",
+  "author": {
+    "name": "xrj"
+  },
   "private": true,
   "scripts": {
     "start": "vue-cli-service electron:serve",
     "build": "vue-cli-service electron:build",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "icon": "electron-icon-builder --input=./public/icon.png --output=build --flatten"
   },
   "main": "background.js",
   "dependencies": {
@@ -28,6 +32,7 @@
     "babel-plugin-component": "^1.1.1",
     "electron": "^28.1.0",
     "electron-devtools-installer": "^3.1.0",
+    "electron-icon-builder": "^2.0.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-cli-plugin-electron-builder": "~2.1.1",
