--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
+    "electron-store": "^8.1.0",
     "element-ui": "^2.15.14",
     "node-sass": "^9.0.0",
+    "phantomjs": "^2.1.1",
     "sass-loader": "^13.3.2",
     "scss": "^0.2.4",
     "scss-loader": "^0.0.1",
-    "vue": "^2.6.14",
-    "vuex": "^3.6.2",
-    "xlsx": "^0.18.5"
+    "vue": "^2.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
