--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.35.0",
     "electron-store": "^8.1.0",
     "element-ui": "^2.15.14",
+    "moment": "^2.30.1",
     "node-sass": "^9.0.0",
     "phantomjs": "^2.1.1",
     "sass-loader": "^13.3.2",
