--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "sass-loader": "^13.3.2",
     "scss": "^0.2.4",
     "scss-loader": "^0.0.1",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -37,7 +38,6 @@
     "electron-icon-builder": "^2.0.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "json2xls": "^0.1.2",
     "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-template-compiler": "^2.6.14"
   },
