--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "scss": "^0.2.4",
     "scss-loader": "^0.0.1",
     "vue": "^2.6.14",
+    "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
