--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.36.1",
     "electron-store": "^8.1.0",
     "element-ui": "^2.15.14",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "node-sass": "^9.0.0",
     "phantomjs": "^2.1.1",
