--- a/.github/workflows/build_windows.yaml
+++ b/.github/workflows/build_windows.yaml
@@ -35,6 +35,7 @@ jobs:
       # step3: npm install
       - name: npm install
         run: |
+          npm install -g phantomjs-prebuilt
           npm install
 
       # step4: build app
