--- a/.github/workflows/build_windows.yaml
+++ b/.github/workflows/build_windows.yaml
@@ -42,6 +42,8 @@ jobs:
       - name: build windows app
         run: |
           npm run win
+        with:
+          token: ${{ secrets.GH_TOKEN }}
 
       # step5: create release
       - name: release
