--- a/.github/workflows/build_windows.yaml
+++ b/.github/workflows/build_windows.yaml
@@ -55,15 +55,12 @@ jobs:
 
       # step6: create gitee release
       - name: gitee release
-        id: create_gitee_release
-        uses: nicennnnnnnlee/action-gitee-release@v1.0.5
+        id: create_release
+        uses: h-twinkle/sync-action@v1.0
         with:
           gitee_owner: xrj4j_admin
           gitee_repo: assist_3d
           gitee_token: ${{ secrets.GITEE_TOKEN }}
-          gitee_tag_name: ${{ github.event.inputs.tag }}
-          gitee_release_name: ${{ github.event.inputs.tag }}
-          gitee_target_commitish: master
+          github_owner: Tiane-ira
+          github_repo: assist_3d
           gitee_upload_retry_times:  3
-          gitee_files: |
-            "dist/*.exe"
