--- a/.github/workflows/sync_gitee.yaml
+++ b/.github/workflows/sync_gitee.yaml
@@ -3,6 +3,12 @@ name: sync_gitee
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: "Version tag"
+        required: true
+        default: "v0.1.0"
 
 jobs:
   build:
