--- a/.github/workflows/sync_gitee.yaml
+++ b/.github/workflows/sync_gitee.yaml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - name: gitee release
         id: gitee_release
-        uses: h-twinkle/sync-action@v1.0
+        uses: h-twinkle/sync-action@master
         with:
           gitee_owner: xrj4j_admin
           gitee_repo: assist_3d
