--- a/.github/workflows/build_windows.yaml
+++ b/.github/workflows/build_windows.yaml
@@ -56,7 +56,7 @@ jobs:
       # step6: create gitee release
       - name: gitee release
         id: create_release
-        uses: h-twinkle/sync-action@v1.0
+        uses: h-twinkle/sync-action@master
         with:
           gitee_owner: xrj4j_admin
           gitee_repo: assist_3d
