fix: 生成release后设置body

--- a/.github/workflows/build_windows.yaml
+++ b/.github/workflows/build_windows.yaml
@@ -50,6 +50,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.event.inputs.tag }}
+          body: "Release ${{ github.event.inputs.tag }}"
           files: "dist/*.exe"
           token: ${{ secrets.GITHUB_TOKEN }}
 
