--- a/.github/workflows/build_windows.yaml
+++ b/.github/workflows/build_windows.yaml
@@ -30,12 +30,12 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v2-beta
         with:
-          node-version: 18
+          node-version: 20
 
       # step3: npm install
       - name: npm install
         run: |
-          npm install -g phantomjs-prebuilt
+          npm install -g phantomjs-prebuilt --ignore-scripts
           npm install
 
       # step4: build app
